# src/routes/apiv1.routes.js
@@ -5,12 +5,10 @@ const conversationsRoutes = require("../modules/conversations/conversations.rout
 const messageRoutes = require("../modules/messages/messages.routes");
 
 const apiv1Routes = (app) => {
-  app.use('/api/v1/users', userRoutes);
-  app.use('/api/v1/conversations', conversationsRoutes);
+  app.use("/api/v1/users", userRoutes);
+  app.use("/api/v1/conversations", conversationsRoutes);
   app.use("/api/v1/messages", messageRoutes);
   app.use("/api/v1/docs", swaggerUi.serve, swaggerUi.setup(swaggerDoc)); // * deberá ser capaz de visualizar la documentación
 };
 
 module.exports = apiv1Routes;
-
-
