# src/swagger.json
@@ -2,7 +2,6 @@
   "openapi": "3.0.0",
   "info": {
     "title": "CHAT_API",
-    "contact": "edwinagemiler17@gmail.com",
     "description": "...",
     "version": "1.0"
   },
@@ -32,18 +31,18 @@
                   },
                   {
                     "example": {
-                      "firstname": "Edwin",
-                      "lastname": "Amaranto",
-                      "email": "edwinagemiler17@gmail.com",
+                      "firstname": "Nelida",
+                      "lastname": "Villegas",
+                      "email": "nelidavillegas@gmail.com",
                       "password": "Academlo123@"
                     }
                   }
                 ]
               },
               "example": {
-                "firstname": "Edwin",
-                "lastname": "Amaranto",
-                "email": "edwinagemiler17@gmail.com",
+                "firstname": "Nelida",
+                "lastname": "Villegas",
+                "email": "nelidavillegas@gmail.com",
                 "password": "Academlo123@"
               }
             }
@@ -72,7 +71,12 @@
             "headers": {}
           }
         },
-        "deprecated": false
+        "deprecated": false,
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       }
     },
     "/users/login": {
@@ -94,14 +98,14 @@
                   },
                   {
                     "example": {
-                      "email": "edwinagemiler17@gmail.com",
+                      "email": "nelidavillegas@gmail.com",
                       "password": "Academlo123@"
                     }
                   }
                 ]
               },
               "example": {
-                "email": "edwinagemiler17@gmail.com",
+                "email": "nelidavillegas@gmail.com",
                 "password": "Academlo123@"
               }
             }
@@ -114,16 +118,16 @@
             "headers": {}
           }
         },
-        "deprecated": false
-      }
-    },
-    "/conversations": {
-      "post": {
+        "deprecated": false,
         "security": [
           {
             "bearer": []
           }
-        ],
+        ]
+      }
+    },
+    "/conversations": {
+      "post": {
         "tags": [
           "conversations"
         ],
@@ -161,16 +165,16 @@
             "headers": {}
           }
         },
-        "deprecated": false
-      }
-    },
-    "/conversations/group": {
-      "post": {
+        "deprecated": false,
         "security": [
           {
             "bearer": []
           }
-        ],
+        ]
+      }
+    },
+    "/conversations/group": {
+      "post": {
         "tags": [
           "conversations"
         ],
@@ -188,25 +192,25 @@
                   },
                   {
                     "example": {
-                      "userId": 1,
+                      "userId": 2,
                       "participantsIds": [
                         3,
                         4,
                         5
                       ],
-                      "title": "parangaricurimicuaro"
+                      "title": "generacion 27"
                     }
                   }
                 ]
               },
               "example": {
-                "userId": 1,
+                "userId": 2,
                 "participantsIds": [
                   3,
                   4,
                   5
                 ],
-                "title": "parangaricurimicuaro"
+                "title": "generacion 27"
               }
             }
           },
@@ -218,7 +222,12 @@
             "headers": {}
           }
         },
-        "deprecated": false
+        "deprecated": false,
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       }
     },
     "/conversations/{id}": {
@@ -288,14 +297,14 @@
                   },
                   {
                     "example": {
-                      "content": "Dejemos asi...",
+                      "content": "Buen dia..",
                       "senderId": 4
                     }
                   }
                 ]
               },
               "example": {
-                "content": "Dejemos asi...",
+                "content": "Buen dia..",
                 "senderId": 4
               }
             }
@@ -376,9 +385,9 @@
           }
         },
         "example": {
-          "firstname": "Edwin",
-          "lastname": "Amaranto",
-          "email": "edwinagemiler17@gmail.com",
+          "firstname": "Nelida",
+          "lastname": "Villegas",
+          "email": "nelidavillegas@gmail.com",
           "password": "Academlo123@"
         }
       },
@@ -398,7 +407,7 @@
           }
         },
         "example": {
-          "email": "edwinagemiler17@gmail.com",
+          "email": "nelidavillegas@gmail.com",
           "password": "Academlo123@"
         }
       },
@@ -450,13 +459,13 @@
           }
         },
         "example": {
-          "userId": 1,
+          "userId": 2,
           "participantsIds": [
             3,
             4,
             5
           ],
-          "title": "parangaricurimicuaro"
+          "title": "generacion 27"
         }
       },
       "createnewmessagerequest": {
@@ -476,7 +485,7 @@
           }
         },
         "example": {
-          "content": "Dejemos asi...",
+          "content": "Buen dia..",
           "senderId": 4
         }
       }
